CF-32 store jwt in httponly cookie to avoid XXS attack